[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/misc/meteor.png" type="Texture" id=1]
[ext_resource path="res://scripts/misc/MeteorStrike.gd" type="Script" id=2]
[ext_resource path="res://assets/particles/meteor_burst_particle.png" type="Texture" id=3]
[ext_resource path="res://assets/particles/smoke_particle.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 289.664

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 100, 0 )
initial_velocity = 10.0
angular_velocity = 62.6
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
spread = 0.0
flatness = 1.0
gravity = Vector3( 0, 100, 0 )
angular_velocity = 62.6
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="ParticlesMaterial" id=8]
flag_disable_z = true
spread = 0.0
flatness = 1.0
gravity = Vector3( 0, 100, 0 )
angular_velocity = 62.6
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 360.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Spin"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1.03526, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.21
angular_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="CircleShape2D" id=5]
radius = 144.091

[node name="MeteorStrike" type="Area2D" groups=["60", "Earth"]]
collision_layer = 129
collision_mask = 129
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="Trails" type="Node2D" parent="."]

[node name="Trail1" type="Particles2D" parent="Trails"]
position = Vector2( -17, -100 )
rotation = 2.18166
scale = Vector2( 7, 7 )
process_material = SubResource( 6 )
texture = ExtResource( 4 )

[node name="Trail2" type="Particles2D" parent="Trails"]
position = Vector2( -86.8456, 36.5165 )
rotation = 2.35619
scale = Vector2( 7, 7 )
process_material = SubResource( 7 )
texture = ExtResource( 4 )

[node name="Trail3" type="Particles2D" parent="Trails"]
position = Vector2( -90.8456, -59.4835 )
rotation = 2.13803
scale = Vector2( 10, 10 )
process_material = SubResource( 8 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.0353527, 0.629959 )
rotation = 6.28319
scale = Vector2( 17.5, 17.5 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/Spin = SubResource( 3 )

[node name="ExplosionParticle" type="Particles2D" parent="."]
position = Vector2( 0.398682, 1.67365 )
scale = Vector2( 7.5, 7.5 )
emitting = false
amount = 36
lifetime = 0.7
one_shot = true
explosiveness = 0.8
randomness = 0.25
process_material = SubResource( 4 )
texture = ExtResource( 3 )

[node name="DestroyedTimer" type="Timer" parent="."]
one_shot = true

[node name="ExplosionDelayTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="DetectorArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorArea"]
position = Vector2( 1.5874, 3.05176e-05 )
shape = SubResource( 5 )

[connection signal="area_entered" from="." to="." method="_on_MeteorStrike_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_MeteorStrike_body_entered"]
[connection signal="timeout" from="DestroyedTimer" to="." method="_on_DestroyedTimer_timeout"]
[connection signal="timeout" from="ExplosionDelayTimer" to="." method="_on_ExplosionDelayTimer_timeout"]
[connection signal="body_entered" from="DetectorArea" to="." method="_on_DetectorArea_body_entered"]
